--- a/search.css
+++ b/search.css
@@ -11,6 +11,7 @@
 .search p {
     text-align: center;
     color: white;
+    margin-bottom: 24px;
 }
 
 .search .search-input {
@@ -20,19 +21,20 @@
     width: fit-content;
     margin: 0 auto;
     background-color: white;
-
-    border-radius: 16px;
+    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 43px;
 
 }
 
 .search .search-input input {
-    border: 1px solid #eeeeee;
+    border: 0;
     text-align: left;
-    width: 270px;
+    width: 350px;
     border-top-left-radius: 16px;
     border-bottom-left-radius: 16px;
-    padding: 8px;
+    padding: 12px;
     box-sizing: border-box;
+    background-color: transparent;
 }
 
 .search .search-input select {
@@ -43,9 +45,14 @@
 }
 
 .search .search-input button {
-    border-radius: 16px;
+    border-radius: 35px;
     border: 0;
-    padding: 0 16px;
-    background-color: #eeeeee;
-    
+    padding: 0 32px;
+    color: white;
+    background: rgb(255,0,228);
+    background: linear-gradient(90deg, rgba(255,0,228,1) 0%, rgba(76,0,255,1) 100%);   
+}
+
+.search .search-input button:hover {
+    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.5);
 }
