--- a/lastheadsection.css
+++ b/lastheadsection.css
@@ -5,12 +5,13 @@
 }
 
 .last-head-section .card {
-    padding: 24px 50px;
+    padding: 24px 32px;
     box-sizing: border-box;
-    width: 250px;
+    width: 300px;
     background-color: white;
     border-radius: 16px;
     margin-left: 32px;
+    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.4);
 }
 
 .last-head-section .card img {
