--- a/services.css
+++ b/services.css
@@ -1,6 +1,6 @@
 .services {
     padding: 16px;
-    
+    padding-bottom: 64px;
 }
 
 .services .head-title {
@@ -17,7 +17,7 @@
     text-align: center;
     color: #575757;
     margin: 0 auto;
-    width: 340px;
+    width: 370px;
 }
 
 .services .cards {
