--- a/search.css
+++ b/search.css
@@ -18,23 +18,28 @@
     display: flex;
     justify-content: center;
     position: relative;
-    width: fit-content;
     margin: 0 auto;
-    background-color: white;
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.5);
     border-radius: 43px;
+    width: 450px;
+    background-color: white;
+    
+}
 
+.search .search-input input:focus {
+    width: 490px;
 }
 
 .search .search-input input {
     border: 0;
     text-align: left;
     width: 350px;
-    border-top-left-radius: 16px;
-    border-bottom-left-radius: 16px;
+    border-top-left-radius: 32px;
+    border-bottom-left-radius: 32px;
     padding: 12px;
     box-sizing: border-box;
-    background-color: transparent;
+    background-color: white;
+    transition: .3s ease-in-out;
 }
 
 .search .search-input select {
@@ -42,6 +47,11 @@
     background-color: white;
     box-shadow: none;
     outline: none;
+}
+
+.search .search-input select::after {
+    width: 0;
+    height: 0;
 }
 
 .search .search-input button {
