--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ header {
     height: 1200px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-origin: border-box;
 }
 
 .container {
