--- a/search.css
+++ b/search.css
@@ -23,7 +23,7 @@
     border-radius: 43px;
     width: 450px;
     background-color: white;
-    
+    direction: ltr;
 }
 
 .search .search-input input:focus {
