--- a/secure.css
+++ b/secure.css
@@ -4,6 +4,7 @@
     background: url('./images/secureBackground.png');
     background-repeat: no-repeat;
     background-size: cover;
+    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.4);
 }
 
 
