--- a/lastheadsection.css
+++ b/lastheadsection.css
@@ -10,9 +10,11 @@
     width: 300px;
     background-color: white;
     border-radius: 16px;
+    margin: auto;
     margin-left: 32px;
     box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.4);
     transition: .3s ease-in-out;
+    margin-top: 16px;
 }
 
 .last-head-section .card:hover {
@@ -37,4 +39,12 @@
 .last-head-section .card p:nth-child(3) {
     font-size: 12px;
     color: rgb(70, 70, 70);
+}
+
+
+@media screen and (max-width: 768px) {
+    .last-head-section .card {
+        margin: auto;
+        margin-top: 16px;
+    }
 }
