--- a/search.css
+++ b/search.css
@@ -2,6 +2,8 @@
     margin: 0 auto;
     font-size: 32px;
     text-align: center;
+    padding: 8px;
+    box-sizing: border-box;
 }
 
 .search * {
@@ -16,12 +18,13 @@
 
 .search .search-input {
     display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
     position: relative;
     margin: 0 auto;
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.5);
     border-radius: 43px;
-    width: 450px;
+    max-width: 450px;
     background-color: white;
     direction: ltr;
 }
@@ -65,4 +68,8 @@
 
 .search .search-input button:hover {
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.5);
+}
+
+.select select {
+    display: none;
 }
