--- a/services.css
+++ b/services.css
@@ -18,7 +18,7 @@
     text-align: center;
     color: #575757;
     margin: 0 auto;
-    width: 370px;
+    max-width: 370px;
 }
 
 .services .cards {
