--- a/footer.css
+++ b/footer.css
@@ -24,3 +24,14 @@ footer {
 .footer-items li a {
     color: #c2c2c2;
 }
+
+@media screen and (max-width: 768px) {
+    .footer-menu {
+        justify-content: initial;
+        flex-wrap: wrap;
+    }
+
+    .footer-menu-item {
+        width: 100%;
+    }
+}
